cargo-features = ["edition2024"]

[package]
name = "ron-assista-bot"
version = "3.1.4"
edition = "2024"

[dependencies]
async-channel = "2.3.1"
bincode = "1.3.3"
chrono = "0.4.40"
emojis = "0.6.4"
futures = "0.3.31"
image = "0.25.5"
indexmap = "2.7.1"
once_cell = "1.20.3"
poise = "0.6.1"
rand = "0.9.0"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = "0.12.12"
roboat = "0.35.0"
serde = "1.0.218"
serde_json = "1.0.139"
serenity = { version = "0.12.4", features = ["rustls_backend", "chrono", "cache", "tokio_task_builder", "simd_json", "temp_cache"], default-features = false }
similar = "2.7.0"
sled = "0.34.7"
static-toml = "1.3.0"
tempfile = "3.17.1"
tokio = "1.43.0"
unicode-segmentation = "1.12.0"
uuid = "1.15.1"

[profile.release]
lto = true
